force-app/main/default/objects/FacturasMaestro__c/FacturasMaestro__c.object-meta.xml
<CustomObject>
    <label>Facturas Maestro</label>
    <nameField>
        <displayFormat>FACT-{000000000}</displayFormat>
        <label>Nombre de Facturas Maestro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas Maestro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>