force-app/main/default/objects/FacturasMaestro__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad del cliente</label>
    <length>32</length>
    <type>Text</type>
</CustomField>