force-app/main/default/objects/FacturasMaestro__c/fields/Codigo_de_la_unidad_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_la_unidad_de_negocio__c</fullName>
    <label>Código de la unidad de negocio</label>
    <type>Phone</type>
</CustomField>