force-app/main/default/objects/FacturasMaestro__c/fields/CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>CodigoCliente__c</fullName>
    <label>Código del cliente</label>
    <length>16</length>
    <type>Text</type>
</CustomField>