force-app/main/default/objects/FacturasMaestro__c/fields/CodigoSucursal__c.field-meta.xml
<CustomField>
    <fullName>CodigoSucursal__c</fullName>
    <description>Código de la sucursal donde se registró la factura.</description>
    <inlineHelpText>Código de la sucursal donde se registró la factura.</inlineHelpText>
    <label>Código de la sucursal</label>
    <length>16</length>
    <type>Text</type>
</CustomField>