force-app/main/default/objects/FacturasMaestro__c/fields/Compa_ia__c.field-meta.xml
<CustomField>
    <fullName>Compa_ia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compañia</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Companias</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Facturas Maestro</relationshipLabel>
    <relationshipName>Facturas_Maestro</relationshipName>
    <type>Lookup</type>
</CustomField>