force-app/main/default/objects/FacturasMaestro__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <label>Nombre del contacto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>