force-app/main/default/objects/FacturasMaestro__c/fields/CP__c.field-meta.xml
<CustomField>
    <fullName>CP__c</fullName>
    <label>Código del país</label>
    <length>16</length>
    <type>Text</type>
</CustomField>