force-app/main/default/objects/FacturasMaestro__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas Maestro</relationshipLabel>
    <relationshipName>Facturas_Maestro1</relationshipName>
    <type>Lookup</type>
</CustomField>