force-app/main/default/objects/FacturasMaestro__c/fields/Direccion_1__c.field-meta.xml
<CustomField>
    <fullName>Direccion_1__c</fullName>
    <label>Dirección del cliente - Linea 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>