force-app/main/default/objects/FacturasMaestro__c/fields/Direccion_2__c.field-meta.xml
<CustomField>
    <fullName>Direccion_2__c</fullName>
    <label>Direccion del cliente - Linea 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>