force-app/main/default/objects/FacturasMaestro__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha de la factura</label>
    <type>Date</type>
</CustomField>