force-app/main/default/objects/FacturasMaestro__c/fields/FechaVence__c.field-meta.xml
<CustomField>
    <fullName>FechaVence__c</fullName>
    <label>Fecha de vencimiento de la factura</label>
    <type>Date</type>
</CustomField>