force-app/main/default/objects/FacturasMaestro__c/fields/Id_Externo_Factura__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo_Factura__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>