force-app/main/default/objects/FacturasMaestro__c/fields/LineaNegocio__c.field-meta.xml
<CustomField>
    <fullName>LineaNegocio__c</fullName>
    <label>Código de la linea de negocio</label>
    <length>16</length>
    <type>Text</type>
</CustomField>