force-app/main/default/objects/FacturasMaestro__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <label>Moneda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>