force-app/main/default/objects/FacturasMaestro__c/fields/MontoRecibido__c.field-meta.xml
<CustomField>
    <fullName>MontoRecibido__c</fullName>
    <label>Monto recibido del cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>