force-app/main/default/objects/FacturasMaestro__c/fields/NombreCliente__c.field-meta.xml
<CustomField>
    <fullName>NombreCliente__c</fullName>
    <label>Nombre del cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>