force-app/main/default/objects/FacturasMaestro__c/fields/NombreVendedor__c.field-meta.xml
<CustomField>
    <fullName>NombreVendedor__c</fullName>
    <label>Nombre del vendedor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>