force-app/main/default/objects/FacturasMaestro__c/fields/NumeroFactura__c.field-meta.xml
<CustomField>
    <fullName>NumeroFactura__c</fullName>
    <externalId>true</externalId>
    <label>Número de la factura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>