force-app/main/default/objects/FacturasMaestro__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País del cliente</label>
    <length>32</length>
    <type>Text</type>
</CustomField>