force-app/main/default/objects/FacturasMaestro__c/fields/SaldoFactura__c.field-meta.xml
<CustomField>
    <fullName>SaldoFactura__c</fullName>
    <label>Saldo de la factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>