force-app/main/default/objects/FacturasMaestro__c/fields/StatusFactura__c.field-meta.xml
<CustomField>
    <fullName>StatusFactura__c</fullName>
    <label>Estado de la factura</label>
    <length>16</length>
    <type>Text</type>
</CustomField>