force-app/main/default/objects/FacturasMaestro__c/fields/Tipo_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_pago__c</fullName>
    <label>Tipo de pago</label>
    <length>10</length>
    <type>Text</type>
</CustomField>