force-app/main/default/objects/FacturasMaestro__c/fields/TipoFactura__c.field-meta.xml
<CustomField>
    <fullName>TipoFactura__c</fullName>
    <label>Tipo de factura</label>
    <length>32</length>
    <type>Text</type>
</CustomField>