force-app/main/default/objects/FacturasMaestro__c/fields/TotalFactura__c.field-meta.xml
<CustomField>
    <fullName>TotalFactura__c</fullName>
    <label>Total de la factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>