force-app/main/default/objects/FacturasMaestro__c/fields/TotalImpuesto__c.field-meta.xml
<CustomField>
    <fullName>TotalImpuesto__c</fullName>
    <label>Impuesto de la factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>